syntax = "proto3";

service StatusService {
	rpc Status(StatusRequest) returns (StatusReply) {}
}

message StatusRequest {
}

message StatusReply {
}